# sparseheatmap

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.js  layouts.js  nodeheatmap.cpp  package.json  sparsearray.cpp  sparsearray.h  sparsearray.js  sparsematrix.cc  sparsematrix.cpp  sparsematrix.h  sparsescroll.cpp  sparsescroll.h  test.js
cpp/: colorengine.cpp  colorengine.h  colormodel.cpp  colormodel.h  lodepng.cpp  lodepng.h  nodeheatmap.cpp  sparsematrix.cpp  sparsematrix.h  sparsescroll.cpp  sparsescroll.h
lib/: colorengine.js  colormodel.js  layouts.js  sparsearray.js
test/: alignment.js  test.js  test2.js
